@@ -31,7 +31,7 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
-			<NOBR><B>{t}Node name:{/t}</B></NOBR>
+			<IMG src="img/node.gif" width="16" align="absmiddle" border="0" alt=""> <B>{t}Node name:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
 			<INPUT TYPE="text" NAME="search[name]" {tip text="Enter node name or fragment only"}>
@@ -39,7 +39,7 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
-			<NOBR><B>{t}MAC address:{/t}</B></NOBR>
+			<IMG src="img/mac.gif" width="16" align="absmiddle" border="0" alt=""> <B>{t}MAC address:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
 			<INPUT TYPE="text" NAME="search[mac]" {tip text="Enter node MAC address or fragment only"}>
@@ -47,7 +47,7 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
-			<NOBR><B>{t}IP address:{/t}</B></NOBR>
+			<IMG src="img/ip.gif" width="16" align="absmiddle" border="0" alt=""> <B>{t}IP address:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
 			<INPUT TYPE="text" NAME="search[ipaddr]" {tip text="Enter node IP address or fragment only"}>
@@ -55,10 +55,19 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
-			<NOBR><B>{t}Description:{/t}</B></NOBR>
+			<IMG src="img/info1.gif" width="16" align="absmiddle" border="0" alt=""> <B>{t}Description:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
 			<INPUT TYPE="text" NAME="search[info]" {tip text="Enter additional informations"}>
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
+			<IMG src="img/empty.gif" width="16" align="absmiddle" border="0" alt=""> <B>{t}Qualification operator:{/t}</B>
+		</TD>
+		<TD CLASS="fright" WIDTH="99%">
+			<INPUT style="border-style: none; background: #DFD5BD" type="radio" value="AND" name="k"{if $k!='OR'} CHECKED{/if}> {t}AND{/t}
+			<INPUT style="border-style: none; background: #DFD5BD" type="radio" value="OR" name="k"{if $k=='OR'} CHECKED{/if}> {t}OR{/t}
 		</TD>
 	</TR>
 	<TR CLASS="light">
